# pybamm-cookie

./: .gitignore  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  copier.yml  noxfile.py  pyproject.toml
.github/: codecov.yml  test_on_push.yml
.github/workflows/: release.yml  test_on_push.yml
docs/: conf.py  index.md
hooks/: post_gen_project.py
src/pybamm_cookie/: __init__.py  __main__.py  cli.py  entry_points_api.ipynb
src/pybamm_cookiecutter/: __init__.py  __main__.py  _version.py  cli.py  entry_point.py
src/pybamm_cookiecutter/models/: __init__.py  model.py
src/pybamm_cookiecutter/models/input/: BasicReservoir.py  SPM.py
src/pybamm_cookiecutter/parameters/: __init__.py  parameter_sets.py
src/pybamm_cookiecutter/parameters/input/: Chen2020.py
template/: .gitignore  .pre-commit-config.yaml.jinja  noxfile.py  noxfile.py.jinja  pyproject.toml.jinja  {% if backend == 'setuptools' and vcs == false %}MANIFEST.in{% endif %}.jinja  {% if license=='MIT' %}LICENSE{% endif %}.jinja
template/docs/: conf.py.jinja
template/docs/_static/: pybamm.css
template/src/{{project_slug}}/: __init__.py.jinja
template/tests/generated_project_tests/: test_entry_points.py.jinja
template/tests/user_tests/: test_package.py.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: test_on_push.yml
template/{{ project_name }}/: .readthedocs.yml  LICENSES-bundled.txt.jinja  README.md.jinja  noxfile.py.jinja  pyproject.toml.jinja  {% if license=='Apache' %}LICENSE{% endif %}.jinja  {% if license=='BSD' %}LICENSE{% endif %}.jinja
template/{{ project_name }}/docs/: conf.py.jinja  index.md.jinja
template/{{ project_name }}/src/{{project_slug}}/: __init__.py.jinja  entry_point.py.jinja
template/{{ project_name }}/src/{{project_slug}}/parameters/input/: Chen2020.py
template/{{ project_name }}/{% if ci == 'github' %}.github{% endif %}/workflows/: test_on_push.yml
tests/: test_entry_points.py  test_model_entry_points.py  test_package.py  test_project_generation.py
tests/project_tests/: test_entry_points.py
tests/template_tests/: test_project_generation.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CITATIONS.bib  README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: test_on_push.yml
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __init__.py  version.py  version.pyi  {% if cookiecutter.backend == "hatch" %}_version.pyi{% endif %}  {% if cookiecutter.hatch_vcs %}_version.py{% endif %}  {% if cookiecutter.parameter_set=='True' %}my_parameters.py{% endif %}
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/models/input/: SPM.py
{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/parameters/input/: Chen2020.py
{{cookiecutter.project_name}}/tests/: test_package.py
{{cookiecutter.project_name}}/tests/generated_project_tests/: test_entry_points.py
